force-app/main/default/objects/Account/fields/ATV_CAUSA_NO_CUALIFICADO__c.field-meta.xml
<CustomField>
    <fullName>ATV_CAUSA_NO_CUALIFICADO__c</fullName>
    <label>Causa no Cualificado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>