force-app/main/default/objects/Account/fields/ATV_CUIT__c.field-meta.xml
<CustomField>
    <fullName>ATV_CUIT__c</fullName>
    <formula>TEXT(CUIT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATV_CUIT</label>
    <type>Text</type>
</CustomField>