force-app/main/default/objects/Account/fields/ATV_Email_Alternativo__c.field-meta.xml
<CustomField>
    <fullName>ATV_Email_Alternativo__c</fullName>
    <label>Email Alternativo</label>
    <type>Email</type>
</CustomField>