force-app/main/default/objects/Account/fields/ATV_Fecha_de_No_Cualificado__c.field-meta.xml
<CustomField>
    <fullName>ATV_Fecha_de_No_Cualificado__c</fullName>
    <label>Fecha de No Cualificado</label>
    <type>Date</type>
</CustomField>