force-app/main/default/objects/Account/fields/ATV_Rango_de_Facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>ATV_Rango_de_Facturaci_n__c</fullName>
    <label>Rango de Facturación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>