force-app/main/default/objects/Account/fields/ATV_Total_Reuniones__c.field-meta.xml
<CustomField>
    <fullName>ATV_Total_Reuniones__c</fullName>
    <label>Total Reuniones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>