force-app/main/default/objects/Account/fields/Carga_Inicial__c.field-meta.xml
<CustomField>
    <fullName>Carga_Inicial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carga Inicial</label>
    <type>Checkbox</type>
</CustomField>