force-app/main/default/objects/Account/fields/Cat__c.field-meta.xml
<CustomField>
    <fullName>Cat__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>81</fullName>
                <label>BRONZE</label>
            </value>
            <value>
                <fullName>79</fullName>
                <label>SILVER</label>
            </value>
            <value>
                <fullName>78</fullName>
                <label>GOLD</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>PLATINUM</label>
            </value>
            <value>
                <fullName>82</fullName>
                <label>EN SONDEO</label>
            </value>
            <value>
                <fullName>83</fullName>
                <label>NO CUALIFICADO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>