force-app/main/default/objects/Account/fields/Categorizacion_Automatica__c.field-meta.xml
<CustomField>
    <fullName>Categorizacion_Automatica__c</fullName>
    <formula>IF(Score_Formula__c &gt;= 91,&quot;PLATINUM&quot;,
    IF(Score_Formula__c &gt;= 71,&quot;GOLD&quot;,
        IF(Score_Formula__c &gt;= 61,&quot;SILVER&quot;,
            &quot;BRONZE&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categorizacion Automatica</label>
    <type>Text</type>
</CustomField>