force-app/main/default/objects/Account/fields/celigo_0_30_days__c.field-meta.xml
<CustomField>
    <fullName>celigo_0_30_days__c</fullName>
    <label>Balance 30 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>