force-app/main/default/objects/Account/fields/CLIENTE_NUEVO__c.field-meta.xml
<CustomField>
    <fullName>CLIENTE_NUEVO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CUENTAS NUEVAS</label>
    <type>Checkbox</type>
</CustomField>