force-app/main/default/objects/Account/fields/Consumo_actual_total__c.field-meta.xml
<CustomField>
    <fullName>Consumo_actual_total__c</fullName>
    <label>Consumo actual total</label>
    <summarizedField>Consumo_Actual__c.Total__c</summarizedField>
    <summaryForeignKey>Consumo_Actual__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>