force-app/main/default/objects/Account/fields/Contactado_por__c.field-meta.xml
<CustomField>
    <fullName>Contactado_por__c</fullName>
    <label>Contactado por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3ksys Castle2</fullName>
                <label>3KSYS CASTLE2</label>
            </value>
            <value>
                <fullName>ALEXA PIERONI</fullName>
            </value>
            <value>
                <fullName>Barry Latimer</fullName>
                <label>BARRY LATIMER</label>
            </value>
            <value>
                <fullName>Bianca James</fullName>
                <label>BIANCA JAMES</label>
            </value>
            <value>
                <fullName>Cecilia I Berdini</fullName>
                <label>CECILIA I BERDINI</label>
            </value>
            <value>
                <fullName>Francisco Cachan</fullName>
                <label>FRANCISCO CACHAN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>