force-app/main/default/objects/Account/fields/Empleados_Formula__c.field-meta.xml
<CustomField>
    <fullName>Empleados_Formula__c</fullName>
    <formula>IF(NumberOfEmployees  &lt;= 50, 0,
    IF(NumberOfEmployees &lt;= 100, 1,
        IF(NumberOfEmployees &lt;= 250, 2,
            IF(NumberOfEmployees &lt;= 500, 3,
                4
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empleados Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>