force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>16</fullName>
                <label>CUSTOMER-0 - CLIENTE PARA REACTIVAR</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>CUSTOMER-1 - ACCIÓN (CERRADO GANADO)</label>
            </value>
            <value>
                <fullName>17</fullName>
                <default>true</default>
                <label>CUSTOMER-2 - CLIENTE EN SONDEO</label>
            </value>
            <value>
                <fullName>CUSTOMER-3 - CLIENTE NO CONTACTADO</fullName>
            </value>
            <value>
                <fullName>21</fullName>
                <label>NO CUALIFICADO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>