force-app/main/default/objects/Account/fields/EstadoEnNetsuite__c.field-meta.xml
<CustomField>
    <fullName>EstadoEnNetsuite__c</fullName>
    <label>EstadoEnNetsuite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>