force-app/main/default/objects/Account/fields/Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia__c</fullName>
    <label>Frecuencia de Compra</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>