force-app/main/default/objects/Account/fields/Interno_telef_nico__c.field-meta.xml
<CustomField>
    <fullName>Interno_telef_nico__c</fullName>
    <label>Interno telefónico</label>
    <length>10</length>
    <type>Text</type>
</CustomField>