force-app/main/default/objects/Account/fields/Nombre_Legal__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Legal__c</fullName>
    <label>Nombre Fantasía</label>
    <length>200</length>
    <type>Text</type>
</CustomField>