force-app/main/default/objects/Account/fields/Oportunidades_Open__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades_Open__c</fullName>
    <label>Oportunidades Open</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>