force-app/main/default/objects/Account/fields/Opp_Won__c.field-meta.xml
<CustomField>
    <fullName>Opp_Won__c</fullName>
    <label>Opp Won</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>ACCION</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>