force-app/main/default/objects/Account/fields/Primera_Oportunidad_Creada__c.field-meta.xml
<CustomField>
    <fullName>Primera_Oportunidad_Creada__c</fullName>
    <label>Primera Oportunidad Creada</label>
    <summarizedField>Opportunity.CreatedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>