force-app/main/default/objects/Account/fields/Score_Nosis_Formula__c.field-meta.xml
<CustomField>
    <fullName>Score_Nosis_Formula__c</fullName>
    <formula>IF(Score__c &lt;= 500, 0,
IF(Score__c &lt;= 600, 1,
IF(Score__c &lt;= 700, 2,
IF(Score__c &lt;= 800, 3,
4))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Nosis Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>