force-app/main/default/objects/Account/fields/TEL_FONO_ALTERNATIVO__c.field-meta.xml
<CustomField>
    <fullName>TEL_FONO_ALTERNATIVO__c</fullName>
    <label>Teléfono Alternativo</label>
    <type>Phone</type>
</CustomField>