force-app/main/default/objects/Account/fields/Tipo_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_cliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
                <label>CLIENTE</label>
            </value>
            <value>
                <fullName>Prospecto</fullName>
                <label>PROSPECTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>