force-app/main/default/objects/Account/fields/Tipo_de_Contribuyente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contribuyente__c</fullName>
    <label>Tipo de Contribuyente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Contribuyente</valueSetName>
    </valueSet>
</CustomField>