force-app/main/default/objects/Account/fields/Tuvo_Opp_Atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Tuvo_Opp_Atenci_n__c</fullName>
    <formula>IF(NOT(ISBLANK(X1er_Opp_Atenci_n__c)), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tuvo Opp Atención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>