force-app/main/default/objects/Account/fields/Usuario_de_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Usuario_de_Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario de Marketing</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>