force-app/main/default/objects/Account/fields/Venta_Total_del_Mes__c.field-meta.xml
<CustomField>
    <fullName>Venta_Total_del_Mes__c</fullName>
    <label>Venta Total del Mes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>