force-app/main/default/objects/Account/fields/X1er_Opp_Atenci_n__c.field-meta.xml
<CustomField>
    <fullName>X1er_Opp_Atenci_n__c</fullName>
    <label>1er Opp Atención</label>
    <summarizedField>Opportunity.Fecha_de_Atenci_n__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>