force-app/main/default/objects/Account/validationRules/CUIT_Incorrecto.validationRule-meta.xml
<ValidationRule>
    <fullName>CUIT_Incorrecto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(CUIT__c )),
BillingCountry  = &quot;ARGENTINA&quot;,
NOT(REGEX(TEXT( CUIT__c ), &apos;\\d{11}&apos;))
)</errorConditionFormula>
    <errorMessage>El CUIT debe tener 11 digitos</errorMessage>
</ValidationRule>