force-app/main/default/objects/Account/listViews/LL.listView-meta.xml
<ListView>
    <fullName>LL</fullName>
    <columns>CUIT__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Rubro__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email__c</columns>
    <columns>ATV_Rango_de_Facturaci_n__c</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>Score__c</columns>
    <columns>Horario_de_atenci_n__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_ZIP</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rubro__c</field>
        <operation>equals</operation>
        <value>75</value>
    </filters>
    <label>CASTLE SA_MARKETING_CERAMICA</label>
</ListView>